# web-socket-in-rust

./: Cargo.toml  diesel.toml  teste.html
migrations/2025-03-20-164036_create_users/: up.sql
migrations/2025-03-20-164049_create_chats/: down.sql  up.sql
migrations/2025-03-20-164114_create_mensagens/: down.sql  up.sql
migrations/2025-03-20-164205_create_usuario_chat/: down.sql  up.sql
src/: main.rs  schema.rs
src/model/: chat.rs  mensagem.rs  mod.rs  user.rs
src/util/: diesel_facade.rs  mod.rs
