[package]
name = "simple_chat_in_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = {version = "2.2.8",features = ["postgres", "uuid", "chrono"]}
dotenv = "0.15.0"
uuid = { version = "1.14.0", features = ["v4", "serde"] }
actix-web = "4.9.0"
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.7"
tracing-actix-web = "0.7.16"
