[package]
name = "simple_chat_in_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.8", features = ["postgres", "uuid", "chrono"] }
dotenv = "0.15.0"
uuid = { version = "1.14.0", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tungstenite = "0.26.2"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
